--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "jokester",
+  "name": "client",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite build --watch",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
-    "test:unit": "vitest",
+    "test:watch": "vitest",
+    "test": "vitest --watch=false",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
