--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,10 +17,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.2",
     "concurrently": "^8.2.0",
     "jest": "^29.6.1",
     "nodemon": "^3.0.1",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   }
 }
